[package]
name = "audio_verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audio_verification"
crate-type = ["rlib", "cdylib"]

[features]
default = ["pyo3/extension-module"]
rayon = ["dep:rayon"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rayon = {version = "1.7.0", optional=true}
serde = {version="1.0.160", features=["derive"]}
serde_yaml = "0.9.21"
thiserror = "1.0.40"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[package.metadata.maturin] 
python-source = "python"